[metadata]
name=pyxnet
version=0.0.1
author=Florian Dupeyron
author_email=florian.dupeyron@mugcat.fr
license='MIT',
description=python SDN library for network tests for embedded devices
long_description= file: README.rst
long_description_content_type=text/x-rst
url=https://github.com/fdmysterious/pyxnet
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator

[options]
package_dir =
    = src

include_package_data=true

packages= find:
python_requires = >=3.6

install_requires=
    pyroute2==0.7.3
    graphviz==0.20.1

[options.packages.find]
where = src

[options.package_data]
* = *.png, LICENSE, *.md, *.rst
